procdic/src/compiling_error.txt
/Users/Mariana/Documents/GitHub/Trabalho-PROG/procdic/src/main.cpp:139:3: error: unknown type name 'f'
  f.close();
  ^
/Users/Mariana/Documents/GitHub/Trabalho-PROG/procdic/src/main.cpp:139:4: error: cannot use dot operator on a type
  f.close();
   ^
/Users/Mariana/Documents/GitHub/Trabalho-PROG/procdic/src/main.cpp:142:2: error: unknown type name 'cout'
        cout << "Word list file ? ";
        ^
/Users/Mariana/Documents/GitHub/Trabalho-PROG/procdic/src/main.cpp:142:7: error: expected unqualified-id
        cout << "Word list file ? ";
             ^
/Users/Mariana/Documents/GitHub/Trabalho-PROG/procdic/src/main.cpp:143:2: error: unknown type name 'cin'
        cin >> word_list_file;
        ^
/Users/Mariana/Documents/GitHub/Trabalho-PROG/procdic/src/main.cpp:143:6: error: expected unqualified-id
        cin >> word_list_file;
            ^
/Users/Mariana/Documents/GitHub/Trabalho-PROG/procdic/src/main.cpp:144:2: error: unknown type name 'cout'
        cout << endl;
        ^
/Users/Mariana/Documents/GitHub/Trabalho-PROG/procdic/src/main.cpp:144:7: error: expected unqualified-id
        cout << endl;
             ^
/Users/Mariana/Documents/GitHub/Trabalho-PROG/procdic/src/main.cpp:147:2: error: unknown type name 'cout'
        cout << "Extracting simple words from file " << dictionary_file << ", " << endl;
        ^
/Users/Mariana/Documents/GitHub/Trabalho-PROG/procdic/src/main.cpp:147:7: error: expected unqualified-id
        cout << "Extracting simple words from file " << dictionary_file << ", " << endl;
             ^
/Users/Mariana/Documents/GitHub/Trabalho-PROG/procdic/src/main.cpp:148:2: error: unknown type name 'cout'
        cout << "beginning with letter ... " << endl << endl;
        ^
/Users/Mariana/Documents/GitHub/Trabalho-PROG/procdic/src/main.cpp:148:7: error: expected unqualified-id
        cout << "beginning with letter ... " << endl << endl;
             ^
/Users/Mariana/Documents/GitHub/Trabalho-PROG/procdic/src/main.cpp:150:2: error: unknown type name 'cout'
        cout << "A" << endl;
        ^
/Users/Mariana/Documents/GitHub/Trabalho-PROG/procdic/src/main.cpp:150:7: error: expected unqualified-id
        cout << "A" << endl;
             ^
/Users/Mariana/Documents/GitHub/Trabalho-PROG/procdic/src/main.cpp:151:3: error: unknown type name 'cout'
  cout << "B" << endl;
  ^
/Users/Mariana/Documents/GitHub/Trabalho-PROG/procdic/src/main.cpp:151:8: error: expected unqualified-id
  cout << "B" << endl;
       ^
/Users/Mariana/Documents/GitHub/Trabalho-PROG/procdic/src/main.cpp:152:2: error: unknown type name 'cout'
        cout << "C" << endl;
        ^
/Users/Mariana/Documents/GitHub/Trabalho-PROG/procdic/src/main.cpp:152:7: error: expected unqualified-id
        cout << "C" << endl;
             ^
/Users/Mariana/Documents/GitHub/Trabalho-PROG/procdic/src/main.cpp:153:2: error: unknown type name 'cout'
        cout << "D" << endl;
        ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
